--- a/src/SkiResort.Web/src/scss/base/_variables.scss
+++ b/src/SkiResort.Web/src/scss/base/_variables.scss
@@ -33,7 +33,7 @@ $font-family-sans-serif: 'Roboto', sans-serif;
 $font-family-light-sans-serif: 'Roboto-Light', sans-serif-light;
 
 // Intelligence
-$intelligence-enabled: false;
+$intelligence-enabled: true;
 
 // Medias
 $media-screen-max-mobile-small: 390px;
