--- a/src/SkiResort.Web/src/scss/base/_icomoon.scss
+++ b/src/SkiResort.Web/src/scss/base/_icomoon.scss
@@ -100,6 +100,10 @@
     content: '\e910';
 }
 
+.ski-icon-marker {
+    padding-right: 10px;
+}
+
 .ski-icon-poles::before {
     content: '\e911';
 }
