Fix typo issues

--- a/src/SkiResort.Web/src/app/modules/dining/templates/dining-detail.template.html
+++ b/src/SkiResort.Web/src/app/modules/dining/templates/dining-detail.template.html
@@ -34,7 +34,7 @@
                     <div class="u-table-row u-pb-5">
                         <div class="u-table-cell">
                             <h3 class="ski-dining_detail-subtitle">
-                                Level of noise:
+                                Noise level:
                             </h3>
                             <span class="ski-dining_detail-result">
                                 {{$ctrl.getLevelOfNoise($ctrl.restaurant.levelOfNoise)}}
