--- a/src/SkiResort.Web/src/app/modules/dining/templates/dining-list.template.html
+++ b/src/SkiResort.Web/src/app/modules/dining/templates/dining-list.template.html
@@ -11,7 +11,7 @@
         </div>
         <div class="ski-info show-intelligence" ng-if="!$ctrl.loading">
             <p>
-                Shawn Bice, based on your location AZURE Cafe is the nearest restaurant.
+                Andrew Davis, based on your location AZURE Cafe is the nearest restaurant.
             </p>
         </div>
 
