--- a/src/SkiResort.Web/src/app/modules/lift/templates/lift-status-list.template.html
+++ b/src/SkiResort.Web/src/app/modules/lift/templates/lift-status-list.template.html
@@ -12,7 +12,7 @@
         <div class="ski-info show-intelligence" ng-if="!$ctrl.loading">
             <p>
                 {{currentUser.fullName}}, based on your location and preference,
-                Sammamish Valley has the shorter wait.
+                Sammamish Valley has the shortest wait.
             </p>
         </div>
         <div class="ski-table ski-lift-list">
