Fix type issues

--- a/src/SkiResort.Web/src/app/modules/rental/templates/new-reservation.template.html
+++ b/src/SkiResort.Web/src/app/modules/rental/templates/new-reservation.template.html
@@ -46,7 +46,7 @@
             
             <div class="row will-disable u-mb-10">
                 <div class="col col-40 u-ellipsis">
-                    <label for="startDate">Pick Up Time</label>
+                    <label for="startDate">Pick up time</label>
                     <ski-select id="startDate"
                                 name="startDate"
                                 has-tabs="true"
@@ -71,7 +71,7 @@
             
             <div class="row will-disable u-mb-10">
                 <div class="col">
-                    <label for="category">Which category it's right for you?</label>
+                    <label for="category">Which category is right for you?</label>
                     <ski-select id="category"
                                 name="category"
                                 has-tabs="true"
