--- a/src/SkiResort.Web/src/app/modules/rental/templates/reservation-list.template.html
+++ b/src/SkiResort.Web/src/app/modules/rental/templates/reservation-list.template.html
@@ -13,7 +13,7 @@
             <div class="ski-icon-spinner spin"></div>
         </div>
         <div class="title">
-            Rental {{rental.rentalId}} <span class="title-price">${{rental.totalCost}} USD</span>
+            Rental {{$index + 1}} <span class="title-price">${{rental.totalCost}} USD</span>
         </div>
         <div class="row">
             <div class="col-33">
