--- a/src/SkiResort.Web/src/app/modules/rental/templates/new-reservation.template.html
+++ b/src/SkiResort.Web/src/app/modules/rental/templates/new-reservation.template.html
@@ -17,7 +17,7 @@
             <div class="row will-disable u-mb-10">
                 <div class="col col-40 u-ellipsis">
                     <label for="startDate">Select start date</label>
-                    <div class="u-relative">
+                    <label class="u-relative item-input ski-item-input-patch">
                         <input type="date"
                                id="startDate"
                                name="startDate"
@@ -26,12 +26,12 @@
                                ng-model-options="{timezone: 'UTC'}"
                                required>
                         <span class="ski-icon-calendar u-absolute-right"></span>
-                    </div>
+                    </label>
                     
                 </div>
                 <div class="col col-40 col-offset-20 u-ellipsis">
                     <label for="endDate">Select end date</label>
-                    <div class="u-relative">
+                    <label class="u-relative item-input ski-item-input-patch">
                         <input type="date"
                             id="endDate"
                             name="endDate"
@@ -40,7 +40,7 @@
                             ng-model-options="{timezone: 'UTC'}"
                             required>
                         <span class="ski-icon-calendar u-absolute-right"></span>
-                    </div>
+                    </label>
                 </div>
             </div>
             
