--- a/src/SkiResort.Web/src/scss/base/_utils.scss
+++ b/src/SkiResort.Web/src/scss/base/_utils.scss
@@ -94,3 +94,9 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+// Others
+.ski-item-input-patch {
+    padding: 0;
+    display: block;
+}
