Added MasterDetailPage, WIP

--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/MainPage.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/MainPage.xaml
@@ -7,51 +7,17 @@
              Title="Adventure Works Ski Resort">
 
   <ContentPage.Content>
-    <StackLayout Spacing="0" Padding="0">
-      <Label Text="{Binding Message}" />
-      <Label Text="{Binding TapCount}" />
-      <Label
-        Text="Centrado y ocupando lo posible verticalmente"
-        HorizontalOptions="Center"
-        VerticalOptions="CenterAndExpand">
-        <Label.GestureRecognizers>
-          <TapGestureRecognizer
-            Tapped="OnTapGestureRecognizerTapped"
-            NumberOfTapsRequired="1" />
-        </Label.GestureRecognizers>
-      </Label>
-      <views:CustomButton
-        Image="icon"
-        Text="Lift Status"
-        TextColor="#FFFFFF"
-        BackgroundColor="#1990ca"
-        BorderRadius="0"
-        HorizontalOptions="Fill" />
-      <views:CustomButton
-        Text="Rental Reservation"
-        TextColor="#FFFFFF"
-        BackgroundColor="#1680b2"
-        BorderRadius="0"
-        HorizontalOptions="Fill" />
-      <views:CustomButton
-        Text="Dining"
-        TextColor="#FFFFFF"
-        BackgroundColor="#14719d"
-        BorderRadius="0"
-        HorizontalOptions="Fill" />
-      <views:CustomButton
-        Text="Live Webcams"
-        TextColor="#FFFFFF"
-        BackgroundColor="#115f85"
-        BorderRadius="0"
-        HorizontalOptions="Fill" />
-      <views:CustomButton
-        Text="Lift Tickers"
-        TextColor="#FFFFFF"
-        BackgroundColor="#0e4f6f"
-        BorderRadius="0"
-        HorizontalOptions="Fill" />
-    </StackLayout>
+    <Grid>
+      <Image Source="home_background.jpg" VerticalOptions="FillAndExpand" Aspect="AspectFill" />
+      
+      <StackLayout Spacing="0" Padding="0">
+        <Label VerticalOptions="CenterAndExpand" />
+        <StackLayout Padding="20">
+          <Button Text="Login" BackgroundColor="#141414" TextColor="#FFFFFF" />
+        </StackLayout>
+        <views:WeatherWidget />
+      </StackLayout>
+    </Grid>
   </ContentPage.Content>
 
 </ContentPage>
