--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Views/WeatherWidget.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Views/WeatherWidget.xaml
@@ -12,10 +12,10 @@
         <ColumnDefinition Width="*" />
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
-      <local:WeatherWidgetItem Icon="snow.png" Title="Weather Now" Value="Snowing" Grid.Column="0" />
-      <local:WeatherWidgetItem Icon="temp.png" Title="Temperature" Value="8/10º F" Grid.Column="1" />
-      <local:WeatherWidgetItem Icon="wind.png" Title="Wind" Value="50 mph" Grid.Column="2" />
-      <local:WeatherWidgetItem Icon="base.png" Title="Base Depth" Value="30 inches" Grid.Column="3" />
+      <local:WeatherWidgetItem Icon="weatherWidget_snow.png" Title="Weather Now" Value="Snowing" Grid.Column="0" />
+      <local:WeatherWidgetItem Icon="weatherWidget_temp.png" Title="Temperature" Value="8/10º F" Grid.Column="1" />
+      <local:WeatherWidgetItem Icon="weatherWidget_wind.png" Title="Wind" Value="50 mph" Grid.Column="2" />
+      <local:WeatherWidgetItem Icon="weatherWidget_base.png" Title="Base Depth" Value="30 inches" Grid.Column="3" />
     </Grid>
     
   </ContentView.Content>
