--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Views/WeatherWidgetItem.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Views/WeatherWidgetItem.xaml
@@ -1,12 +1,32 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="SkiResort.XamarinApp.Views.WeatherWidgetItem">
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="SkiResort.XamarinApp.Views.WeatherWidgetItem">
   <ContentView.Content>
 
     <StackLayout Orientation="Horizontal">
-      <Image Source="{Binding Icon}" HeightRequest="25" WidthRequest="25" />
+      <Image Source="{Binding Icon}" HeightRequest="25" WidthRequest="25">
+        <Image.WidthRequest>
+          <OnPlatform x:TypeArguments="x:Double"
+                      iOS="18"
+                      Android="25" />
+        </Image.WidthRequest>
+      </Image>
       <StackLayout>
-        <Label Text="{Binding Title}" TextColor="#FFFFFF" LineBreakMode="NoWrap" FontSize="10" />
-        <Label Text="{Binding Value}" TextColor="#FFFFFF" LineBreakMode="NoWrap" FontSize="13" FontAttributes="Bold" />
+        <Label Text="{Binding Title}" TextColor="#FFFFFF" LineBreakMode="TailTruncation">
+          <Label.FontSize>
+            <OnPlatform x:TypeArguments="x:Double"
+                        iOS="8"
+                        Android="10" />
+          </Label.FontSize>
+        </Label>
+        <Label Text="{Binding Value}" TextColor="#FFFFFF" LineBreakMode="TailTruncation" FontAttributes="Bold">
+          <Label.FontSize>
+            <OnPlatform x:TypeArguments="x:Double"
+                        iOS="9"
+                        Android="13" />
+          </Label.FontSize>
+        </Label>
       </StackLayout>
     </StackLayout>
 
