--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/MainMenu.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/MainMenu.xaml
@@ -2,18 +2,24 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SkiResort.XamarinApp.Pages.MainMenu"
-             Title="Menu">
+             Title="Menu"
+             BackgroundColor="#141414"
+             Padding="0,40,0,0">
   <ContentPage.Resources>
     <ResourceDictionary>
 
       <Style x:Key="mainStackLayoutStyle" TargetType="StackLayout">
         <Setter Property="VerticalOptions" Value="FillAndExpand" />
-        <Setter Property="BackgroundColor" Value="#141414" />
       </Style>
 
       <Style x:Key="listViewStyle" TargetType="ListView">
         <Setter Property="VerticalOptions" Value="FillAndExpand" />
         <Setter Property="SeparatorVisibility" Value="None" />
+        <Setter Property="BackgroundColor" Value="#141414" />
+      </Style>
+      
+      <Style x:Key="menuCellStyle" TargetType="ImageCell">
+        <Setter Property="TextColor" Value="#FFFFFF" />
       </Style>
       
     </ResourceDictionary>
@@ -23,7 +29,7 @@
       <ListView x:Name="listView" Style="{StaticResource listViewStyle}">
         <ListView.ItemTemplate>
           <DataTemplate>
-            <ImageCell Text="{Binding Title}" ImageSource="{Binding IconSource}" />
+            <ImageCell Text="{Binding Title}" ImageSource="{Binding IconSource}" TextColor="#FFFFFF" />
           </DataTemplate>
         </ListView.ItemTemplate>
       </ListView>
