--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/LiftStatusPage.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/LiftStatusPage.xaml
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SkiResort.XamarinApp.Pages.MainMenu"
-             Title="Menu"
-             BackgroundColor="#141414"
-             Padding="0,40,0,0">
+             x:Class="SkiResort.XamarinApp.Pages.LiftStatusPage"
+             Title="Lift Status">
+
   <ContentPage.Resources>
     <ResourceDictionary>
 
@@ -14,21 +13,22 @@
 
       <Style x:Key="listViewStyle" TargetType="ListView">
         <Setter Property="VerticalOptions" Value="FillAndExpand" />
-        <Setter Property="SeparatorVisibility" Value="None" />
-        <Setter Property="BackgroundColor" Value="#141414" />
       </Style>
-      
+
     </ResourceDictionary>
   </ContentPage.Resources>
+  
   <ContentPage.Content>
+
     <StackLayout Style="{StaticResource mainStackLayoutStyle}">
       <ListView x:Name="listView" Style="{StaticResource listViewStyle}">
         <ListView.ItemTemplate>
           <DataTemplate>
-            <ImageCell Text="{Binding Title}" ImageSource="{Binding IconSource}" TextColor="#FFFFFF" />
+            <ImageCell Text="{Binding Name}" ImageSource="{Binding IconSource}" />
           </DataTemplate>
         </ListView.ItemTemplate>
       </ListView>
     </StackLayout>
+    
   </ContentPage.Content>
 </ContentPage>
