Weather Widget gets real data

--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Views/WeatherWidget.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Views/WeatherWidget.xaml
@@ -21,10 +21,12 @@
         <ColumnDefinition Width="*" />
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
-      <local:WeatherWidgetItem Icon="weatherWidget_snow.png" Title="Weather Now" Value="Snowing" Grid.Column="0" />
-      <local:WeatherWidgetItem Icon="weatherWidget_temp.png" Title="Temperature" Value="8/10º F" Grid.Column="1" />
-      <local:WeatherWidgetItem Icon="weatherWidget_wind.png" Title="Wind" Value="50 mph" Grid.Column="2" />
-      <local:WeatherWidgetItem Icon="weatherWidget_base.png" Title="Base Depth" Value="30 inches" Grid.Column="3" />
+      <Label Text="{Binding Temperature}" />
+      <local:WeatherWidgetItem Icon="weatherWidget_snow.png" Title="Weather Now" Value="{Binding Weather}" Grid.Column="0" Opacity="{Binding ItemsOpacity}" />
+      <local:WeatherWidgetItem Icon="weatherWidget_temp.png" Title="Temperature" Value="{Binding Temperature}" Grid.Column="1" Opacity="{Binding ItemsOpacity}" />
+      <local:WeatherWidgetItem Icon="weatherWidget_wind.png" Title="Wind" Value="{Binding Wind}" Grid.Column="2" Opacity="{Binding ItemsOpacity}" />
+      <local:WeatherWidgetItem Icon="weatherWidget_base.png" Title="Base Depth" Value="{Binding BaseDepth}" Grid.Column="3" Opacity="{Binding ItemsOpacity}" />
+      <ActivityIndicator Color="White" IsRunning="{Binding Loading}" Grid.ColumnSpan="4" />
     </Grid>
     
   </ContentView.Content>
