--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp.iOS/Resources/LaunchScreen.storyboard
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp.iOS/Resources/LaunchScreen.storyboard
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+﻿<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="X5k-f2-b5h">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
@@ -16,12 +16,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" image="Icon-60.png" translatesAutoresizingMaskIntoConstraints="NO" id="23">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="logo-splash.png" translatesAutoresizingMaskIntoConstraints="NO" id="23">
                                 <rect key="frame" x="270" y="270" width="60" height="60"/>
                                 <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.20392156862745098" green="0.59607843137254901" blue="0.85882352941176465" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.0901960784313725" green="0.4862745098039216" blue="0.6745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="23" firstAttribute="centerY" secondItem="yd7-JS-zBw" secondAttribute="centerY" priority="1" id="39"/>
                             <constraint firstItem="23" firstAttribute="centerX" secondItem="yd7-JS-zBw" secondAttribute="centerX" priority="1" id="41"/>
@@ -34,6 +34,32 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Icon-60.png" width="180" height="180"/>
+        <image name="logo-splash.png" width="60" height="60"/>
+        <image name="Default-568h.png" width="320" height="568"/>
+        <image name="Default-Portrait.png" width="768" height="1004"/>
+        <image name="Default.png" width="320" height="480"/>
+        <image name="home_background.jpg" width="1086" height="873"/>
+        <image name="Icon-100.png" width="100" height="100"/>
+        <image name="Icon-114.png" width="114" height="114"/>
+        <image name="Icon-144.png" width="144" height="144"/>
+        <image name="Icon-50.png" width="50" height="50"/>
+        <image name="Icon-57.png" width="57" height="57"/>
+        <image name="Icon-60.png" width="60" height="60"/>
+        <image name="Icon-72.png" width="72" height="72"/>
+        <image name="Icon-76.png" width="76" height="76"/>
+        <image name="Icon-Small-40.png" width="40" height="40"/>
+        <image name="Icon-Small-50.png" width="50" height="50"/>
+        <image name="Icon-Small.png" width="29" height="29"/>
+        <image name="Icon.png" width="57" height="57"/>
+        <image name="iTunesArtwork-1024.png" width="1024" height="1024"/>
+        <image name="iTunesArtwork-512.png" width="512" height="512"/>
+        <image name="liftStatus_circle.png" width="40" height="40"/>
+        <image name="liftStatus_diamond.png" width="40" height="40"/>
+        <image name="liftStatus_square.png" width="40" height="40"/>
+        <image name="logo.png" width="174" height="30"/>
+        <image name="weatherWidget_base.png" width="146" height="106"/>
+        <image name="weatherWidget_snow.png" width="132" height="154"/>
+        <image name="weatherWidget_temp.png" width="71" height="151"/>
+        <image name="weatherWidget_wind.png" width="147" height="150"/>
     </resources>
 </document>
