--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Views/RentalView.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Views/RentalView.xaml
@@ -1,12 +1,20 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converters="clr-namespace:SkiResort.XamarinApp.Converters;assembly=SkiResort.XamarinApp"
+             xmlns:ffil="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              x:Class="SkiResort.XamarinApp.Views.RentalView"
-             Padding="15,15,15,0"
              x:Name="control">
 
   <ContentView.Resources>
     <ResourceDictionary>
+      
+      <converters:DoubleToCurrencyConverter x:Key="doubleToCurrency"></converters:DoubleToCurrencyConverter>
+      <converters:IntToRentalIdConverter x:Key="intToRentalId"></converters:IntToRentalIdConverter>
+      <converters:RentalToDateRangeConverter x:Key="rentalToDateRange"></converters:RentalToDateRangeConverter>
+      <converters:DateTimeToHourConverter x:Key="dateTimeToHour"></converters:DateTimeToHourConverter>
+      <converters:RentalToTypeAndLevelConverter x:Key="rentalToTypeAndLevel"></converters:RentalToTypeAndLevelConverter>
+      <converters:IntToInchesConverter x:Key="intToInches"></converters:IntToInchesConverter>
 
       <Style x:Key="mainContainerStyle" TargetType="StackLayout">
         <Setter Property="BackgroundColor" Value="White" />
@@ -34,6 +42,10 @@
         <Setter Property="FontAttributes" Value="Bold" />
       </Style>
 
+      <Style x:Key="detailValueStyle" TargetType="Label">
+        <!--<Setter Property="LineBreakMode" Value="NoWrap" />-->
+      </Style>
+
       <Style x:Key="sizesRowStyle" TargetType="Grid">
         <Setter Property="Padding" Value="15" />
       </Style>
@@ -46,9 +58,9 @@
       
       <StackLayout Style="{StaticResource titleRowStyle}">
         <Label Style="{StaticResource titleIdStyle}"
-               Text="{Binding Rental.RentalId, Source={x:Reference control}}"  />
+               Text="{Binding Rental.RentalId, Source={x:Reference control}, Converter={StaticResource intToRentalId}}"  />
         <Label Style="{StaticResource titlePriceStyle}"
-               Text="$40 USD"  />
+               Text="{Binding Rental.TotalCost, Source={x:Reference control}, Converter={StaticResource doubleToCurrency}}"  />
       </StackLayout>
       
       <Grid Style="{StaticResource detailsRowStyle}">
@@ -58,16 +70,16 @@
           <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <StackLayout Grid.Column="0">
-          <Label Text="Dates" Style="{StaticResource detailTitleStyle}" />
-          <Label Text="5/10/18 - 5/15/18" />
+          <Label Style="{StaticResource detailTitleStyle}" Text="Dates" />
+          <Label Style="{StaticResource detailValueStyle}" Text="{Binding Rental, Source={x:Reference control}, Converter={StaticResource rentalToDateRange}}" />
         </StackLayout>
         <StackLayout Grid.Column="1">
-          <Label Text="Pick up at" Style="{StaticResource detailTitleStyle}" />
-          <Label Text="05:30 AM" />
+          <Label Style="{StaticResource detailTitleStyle}" Text="Pick up at"  />
+          <Label Style="{StaticResource detailValueStyle}" Text="{Binding Rental.StartDate, Source={x:Reference control}, Converter={StaticResource dateTimeToHour}}" />
         </StackLayout>
         <StackLayout Grid.Column="2">
-          <Label Text="Type / Level" Style="{StaticResource detailTitleStyle}" />
-          <Label Text="Snowboard Beginner" />
+          <Label Style="{StaticResource detailTitleStyle}" Text="Type / Level" />
+          <Label Style="{StaticResource detailValueStyle}" Text="{Binding Rental, Source={x:Reference control}, Converter={StaticResource rentalToTypeAndLevel}}" />
         </StackLayout>
       </Grid>
       
@@ -77,17 +89,26 @@
           <ColumnDefinition Width="*" />
           <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <StackLayout Grid.Column="0">
-          <Label Text="Shoe Size" Style="{StaticResource detailTitleStyle}" />
-          <Label Text="9" />
+        <StackLayout Orientation="Horizontal" Grid.Column="0">
+          <ffil:CachedImage Source="shoe.png" WidthRequest="30" HeightRequest="30" DownsampleToViewSize="true" />
+          <StackLayout>
+            <Label Text="Shoe Size" Style="{StaticResource detailTitleStyle}" />
+            <Label Text="{Binding Rental.ShoeSize, Source={x:Reference control}}" />
+          </StackLayout>
         </StackLayout>
-        <StackLayout Grid.Column="1">
-          <Label Text="Ski Size" Style="{StaticResource detailTitleStyle}" />
-          <Label Text="120 in" />
+        <StackLayout Orientation="Horizontal" Grid.Column="1">
+          <ffil:CachedImage Source="skies.png" WidthRequest="30" HeightRequest="30" DownsampleToViewSize="true" />
+          <StackLayout>
+            <Label Text="Ski Size" Style="{StaticResource detailTitleStyle}" />
+            <Label Text="{Binding Rental.SkiSize, Source={x:Reference control}, Converter={StaticResource intToInches}}" />
+          </StackLayout>
         </StackLayout>
-        <StackLayout Grid.Column="2">
-          <Label Text="Poles" Style="{StaticResource detailTitleStyle}" />
-          <Label Text="42 in" />
+        <StackLayout Orientation="Horizontal" Grid.Column="2">
+          <ffil:CachedImage Source="poles.png" WidthRequest="30" HeightRequest="30" DownsampleToViewSize="true" />
+          <StackLayout>
+            <Label Text="Poles" Style="{StaticResource detailTitleStyle}" />
+            <Label Text="{Binding Rental.PoleSize, Source={x:Reference control}, Converter={StaticResource intToInches}}" />
+          </StackLayout>
         </StackLayout>
       </Grid>
     </StackLayout>
