--- a/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/DiningPage.xaml
+++ b/src/SkiResort.XamarinApp/SkiResort.XamarinApp/Pages/DiningPage.xaml
@@ -3,6 +3,52 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:views="clr-namespace:SkiResort.XamarinApp.Views"
              x:Class="SkiResort.XamarinApp.Pages.DiningPage"
+             x:Name="page"
              Title="Dining">
-  <views:DiningView />
+
+  <ContentPage.Resources>
+    <ResourceDictionary>
+      
+      <Style x:Key="listViewStyle" TargetType="ListView">
+        <Setter Property="VerticalOptions" Value="FillAndExpand" />
+        <Setter Property="RowHeight" Value="90" />
+        <Setter Property="BackgroundColor" Value="#00000000" />
+      </Style>
+
+      <Style x:Key="loadingStackLayoutStyle" TargetType="StackLayout">
+        <Setter Property="VerticalOptions" Value="CenterAndExpand" />
+        <Setter Property="HorizontalOptions" Value="CenterAndExpand" />
+      </Style>
+      
+    </ResourceDictionary>
+  </ContentPage.Resources>
+
+  <ContentPage.Content>
+
+    <Grid>
+
+      <ListView ItemsSource="{Binding Restaurants}"
+                Style="{StaticResource listViewStyle}">
+
+        <ListView.ItemTemplate>
+          <DataTemplate>
+            <ViewCell>
+
+              <views:DiningView Restaurant="{Binding}" UserPosition="{Binding UserPosition, Source={x:Reference page}}" />
+
+            </ViewCell>
+          </DataTemplate>
+        </ListView.ItemTemplate>
+
+      </ListView>
+
+      <StackLayout Style="{StaticResource loadingStackLayoutStyle}" IsVisible="{Binding Loading}">
+        <ActivityIndicator Color="Black" IsRunning="{Binding Loading}" />
+      </StackLayout>
+
+    </Grid>
+
+  </ContentPage.Content>
+  
+
 </ContentPage>
